fix delete post modal spacing

--- a/main_app/static/css/styles.css
+++ b/main_app/static/css/styles.css
@@ -412,3 +412,27 @@ input[type=submit]:hover {
     margin-bottom: 25px;
     justify-content: center;
 }
+
+.delete-post-content p {
+    margin: 15px 0;
+    padding: 0 0 25px 0;
+}
+
+.delete-post-content__buttons {
+    margin-bottom: 25px;
+}
+
+.delete-post-content a {
+    margin: 25px 10px;
+    padding: 8px 25px;
+    cursor: pointer;
+    background-color: var(--light-alt);
+    border-radius: 25px;
+    color: var(--dark);
+}
+
+#delete-post-confirm {
+    background-color: var(--accent);
+    border-radius: 25px;
+    color: var(--light);
+}
